--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,9 +94,7 @@ layout: table_wrappers
     {% if nav_footer_custom != "" %}
       {{ nav_footer_custom }}
     {% else %}
-      <footer class="site-footer">
-        This site uses <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
-      </footer>
+      {{ nav_footer_custom }}
     {% endif %}
   </div>
   <div class="main" id="top">
